--- a/src/Distracey.Log4Net/Distracey.Log4Net.csproj
+++ b/src/Distracey.Log4Net/Distracey.Log4Net.csproj
@@ -66,16 +66,19 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Log4NetEventLogger.cs" />
     <Compile Include="Log4NetApmApiFilterAttribute.cs" />
     <Compile Include="Log4NetApmConfigurationExtensions.cs" />
     <Compile Include="Log4NetApmExceptionLogger.cs" />
     <Compile Include="Log4NetApmHttpClientDelegatingHandler.cs" />
-    <Compile Include="Log4NetApmMethodHandlerFactory.cs" />
     <Compile Include="Log4NetApmHttpClientDelegatingHandlerFactory.cs" />
-    <Compile Include="Log4NetApmMethodHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Distracey.Common\Distracey.Common.csproj">
+      <Project>{176f4711-56bf-4b47-be37-07e3bc5a7d30}</Project>
+      <Name>Distracey.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Distracey\Distracey.csproj">
       <Project>{4c3a50a8-f0e2-4849-b0b7-78afe3894963}</Project>
       <Name>Distracey</Name>
