--- a/src/Distracey.Logary/Distracey.Logary.csproj
+++ b/src/Distracey.Logary/Distracey.Logary.csproj
@@ -91,16 +91,19 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="LogaryEventLogger.cs" />
     <Compile Include="LogaryApmApiFilterAttribute.cs" />
     <Compile Include="LogaryApmConfigurationExtensions.cs" />
     <Compile Include="LogaryApmExceptionLogger.cs" />
-    <Compile Include="LogaryApmMethodHandlerFactory.cs" />
-    <Compile Include="LogaryApmMethodHandler.cs" />
     <Compile Include="LogaryApmHttpClientDelegatingHandler.cs" />
     <Compile Include="LogaryApmHttpClientDelegatingHandlerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Distracey.Common\Distracey.Common.csproj">
+      <Project>{176f4711-56bf-4b47-be37-07e3bc5a7d30}</Project>
+      <Name>Distracey.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Distracey\Distracey.csproj">
       <Project>{4c3a50a8-f0e2-4849-b0b7-78afe3894963}</Project>
       <Name>Distracey</Name>
