--- a/src/Distracey.NoOperation/Distracey.NoOperation.csproj
+++ b/src/Distracey.NoOperation/Distracey.NoOperation.csproj
@@ -57,11 +57,14 @@
     <Compile Include="NoOperationApmExceptionLogger.cs" />
     <Compile Include="NoOperationApmHttpClientDelegatingHandler.cs" />
     <Compile Include="NoOperationApmHttpClientDelegatingHandlerFactory.cs" />
-    <Compile Include="NoOperationApmMethodHandler.cs" />
-    <Compile Include="NoOperationApmMethodHandlerFactory.cs" />
+    <Compile Include="NoOperationEventLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Distracey.Common\Distracey.Common.csproj">
+      <Project>{176f4711-56bf-4b47-be37-07e3bc5a7d30}</Project>
+      <Name>Distracey.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Distracey\Distracey.csproj">
       <Project>{4c3a50a8-f0e2-4849-b0b7-78afe3894963}</Project>
       <Name>Distracey</Name>
