--- a/src/Distracey.Tests/packages.config
+++ b/src/Distracey.Tests/packages.config
@@ -5,4 +5,5 @@
   <package id="Moq" version="4.2.1510.2205" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="NUnit" version="3.2.1" targetFramework="net45" />
+  <package id="NUnit.ReSharperRunner3" version="3.0.12" targetFramework="net45" />
 </packages>
