--- a/src/Distracey/Distracey.csproj
+++ b/src/Distracey/Distracey.csproj
@@ -87,9 +87,12 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="ApmEventContext.cs" />
+    <Compile Include="EventLoggerExtensions.cs" />
     <Compile Include="IApmContextExtractor.cs" />
+    <Compile Include="IEventLogger.cs" />
     <Compile Include="MethodHandler\ApmMethodHandlerApmContextExtensions.cs" />
-    <Compile Include="MethodHandler\ApmMethodHandlerBaseExtensions.cs" />
+    <Compile Include="MethodHandler\ApmMethodHandlerExtensions.cs" />
     <Compile Include="Tracking\ExecutionEdge.cs" />
     <Compile Include="Tracking\ExecutionGraph.cs" />
     <Compile Include="Tracking\ExecutionEdgeType.cs" />
@@ -112,7 +115,7 @@
     <Compile Include="ApmContext.cs" />
     <Compile Include="ApmExtensions.cs" />
     <Compile Include="Web\HttpClient\ApmHttpClientDelegatingHandlerBase.cs" />
-    <Compile Include="MethodHandler\ApmMethodHandlerBase.cs" />
+    <Compile Include="MethodHandler\ApmMethodHandler.cs" />
     <Compile Include="MethodHandler\ApmMethodHandlerStartInformation.cs" />
     <Compile Include="MethodHandler\ApmMethodHandlerFinishInformation.cs" />
     <Compile Include="Web\HttpClient\ApmHttpClientFinishInformation.cs" />
@@ -126,7 +129,6 @@
     <Compile Include="Web\WebApi\ApmWebApiStartInformation.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="IApmContext.cs" />
-    <Compile Include="MethodHandler\IApmMethodHandlerFactory.cs" />
     <Compile Include="Web\HttpClient\IApmHttpClientDelegatingHandlerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\Reflection\BackingFieldResolver.cs" />
@@ -149,6 +151,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Null\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Distracey.Common\Distracey.Common.csproj">
+      <Project>{176f4711-56bf-4b47-be37-07e3bc5a7d30}</Project>
+      <Name>Distracey.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
