--- a/src/Distracey.Tests/Distracey.Tests.csproj
+++ b/src/Distracey.Tests/Distracey.Tests.csproj
@@ -57,12 +57,11 @@
   <ItemGroup>
     <Compile Include="ApmContextTests.cs" />
     <Compile Include="ApmRequestParserTests.cs" />
-    <Compile Include="ApmMethodHandlerBaseTests.cs" />
+    <Compile Include="ApmMethodHandlerTests.cs" />
     <Compile Include="ApmWebApiFilterAttributeBaseTracingTests.cs" />
     <Compile Include="ContextUtil.cs" />
     <Compile Include="PerformanceCounterApmRuntimeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Mocks\TestApmHttpClientDelegatingHandler.cs" />
     <Compile Include="Mocks\TestApmWebApiFilterAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
