--- a/src/Distracey.Examples.ServiceDepthTwo/Distracey.Examples.ServiceDepthTwo.csproj
+++ b/src/Distracey.Examples.ServiceDepthTwo/Distracey.Examples.ServiceDepthTwo.csproj
@@ -153,6 +153,10 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Distracey.Agent.Common\Distracey.Agent.Common.csproj">
+      <Project>{c7ca25a8-377e-47cd-a2f5-2feffc05e7e8}</Project>
+      <Name>Distracey.Agent.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Distracey.Common\Distracey.Common.csproj">
       <Project>{176F4711-56BF-4B47-BE37-07E3BC5A7D30}</Project>
       <Name>Distracey.Common</Name>
