--- a/src/Distracey.Agent.SystemWeb/Distracey.Agent.SystemWeb.csproj
+++ b/src/Distracey.Agent.SystemWeb/Distracey.Agent.SystemWeb.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FF6D66EF-1BA8-4A8E-A37C-F7B3A874D3AA}</ProjectGuid>
+    <ProjectGuid>{76676001-EF79-4DD4-9DED-097DCE81124A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Distracey.NoOperation</RootNamespace>
-    <AssemblyName>Distracey.NoOperation</AssemblyName>
+    <RootNamespace>Distracey.Agent.SystemWeb</RootNamespace>
+    <AssemblyName>Distracey.Agent.SystemWeb</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,49 +30,48 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data.Entity.Design" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
+      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NoOperationApmConfigurationExtensions.cs" />
-    <Compile Include="NoOperationApmExceptionLogger.cs" />
-    <Compile Include="NoOperationApmEventLogger.cs" />
+    <Compile Include="ApmContextHttpMessageExtractor.cs" />
+    <Compile Include="ApmExtensions.cs" />
+    <Compile Include="ApmHttpRequestMessageParser.cs" />
+    <Compile Include="HttpClient\ApmHttpClientApmContextExtensions.cs" />
+    <Compile Include="HttpClient\ApmHttpClientDelegatingHandler.cs" />
+    <Compile Include="HttpClient\ApmHttpClientFinishInformation.cs" />
+    <Compile Include="HttpClient\ApmHttpClientRequestDecorator.cs" />
+    <Compile Include="HttpClient\ApmHttpClientStartInformation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Session\HttpContextSessionContainer.cs" />
+    <Compile Include="WebApi\ApmAttribute.cs" />
+    <Compile Include="WebApi\ApmOutgoingResponseDecorator.cs" />
+    <Compile Include="WebApi\ApmWebApiFilterAttribute.cs" />
+    <Compile Include="WebApi\ApmWebApiFilterAttributeExtensions.cs" />
+    <Compile Include="WebApi\ApmWebApiFinishInformation.cs" />
+    <Compile Include="WebApi\ApmWebApiRequestDecorator.cs" />
+    <Compile Include="WebApi\ApmWebApiStartInformation.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Distracey.Agent.Core\Distracey.Agent.Core.csproj">
-      <Project>{c7ca25a8-377e-47cd-a2f5-2feffc05e7e8}</Project>
-      <Name>Distracey.Agent.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Distracey.Agent.SystemWeb\Distracey.Agent.SystemWeb.csproj">
-      <Project>{76676001-ef79-4dd4-9ded-097dce81124a}</Project>
-      <Name>Distracey.Agent.SystemWeb</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Distracey.Common\Distracey.Common.csproj">
       <Project>{176f4711-56bf-4b47-be37-07e3bc5a7d30}</Project>
       <Name>Distracey.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Distracey\Distracey.csproj">
-      <Project>{4c3a50a8-f0e2-4849-b0b7-78afe3894963}</Project>
-      <Name>Distracey</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
