--- a/src/Distracey.Agent.SystemWeb/Distracey.Agent.SystemWeb.csproj
+++ b/src/Distracey.Agent.SystemWeb/Distracey.Agent.SystemWeb.csproj
@@ -55,18 +55,20 @@
     <Compile Include="ApmHttpRequestMessageParser.cs" />
     <Compile Include="HttpClient\ApmHttpClientApmContextExtensions.cs" />
     <Compile Include="HttpClient\ApmHttpClientDelegatingHandler.cs" />
-    <Compile Include="HttpClient\ApmHttpClientFinishInformation.cs" />
+    <Compile Include="HttpClient\ApmHttpClientFinishedMessage.cs" />
     <Compile Include="HttpClient\ApmHttpClientRequestDecorator.cs" />
-    <Compile Include="HttpClient\ApmHttpClientStartInformation.cs" />
+    <Compile Include="HttpClient\ApmHttpClientStartedMessage.cs" />
+    <Compile Include="HttpClient\IApmHttpClientLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Session\HttpContextSessionContainer.cs" />
     <Compile Include="WebApi\ApmAttribute.cs" />
     <Compile Include="WebApi\ApmOutgoingResponseDecorator.cs" />
     <Compile Include="WebApi\ApmWebApiFilterAttribute.cs" />
     <Compile Include="WebApi\ApmWebApiFilterAttributeExtensions.cs" />
-    <Compile Include="WebApi\ApmWebApiFinishInformation.cs" />
+    <Compile Include="WebApi\ApmWebApiFinishedMessage.cs" />
     <Compile Include="WebApi\ApmWebApiRequestDecorator.cs" />
-    <Compile Include="WebApi\ApmWebApiStartInformation.cs" />
+    <Compile Include="WebApi\ApmWebApiStartedMessage.cs" />
+    <Compile Include="WebApi\IApmWebApiFilterLogger.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Distracey.Common\Distracey.Common.csproj">
