--- a/src/Distracey.Common/Distracey.Common.csproj
+++ b/src/Distracey.Common/Distracey.Common.csproj
@@ -55,8 +55,18 @@
     <Compile Include="Helpers\TaskHelpers.cs" />
     <Compile Include="Helpers\TaskHelpersExtensions.cs" />
     <Compile Include="IApmContext.cs" />
+    <Compile Include="IApmContextExtensions.cs" />
     <Compile Include="IApmContextExtractor.cs" />
     <Compile Include="IEventLogger.cs" />
+    <Compile Include="Message\TracingMessageExtensions.cs" />
+    <Compile Include="Message\MessageExtensions.cs" />
+    <Compile Include="Message\ISourceMessage.cs" />
+    <Compile Include="Message\IClientSourceMessage.cs" />
+    <Compile Include="Message\IMessage.cs" />
+    <Compile Include="Message\ITimedMessage.cs" />
+    <Compile Include="Message\ITracingMessage.cs" />
+    <Compile Include="Message\ClientSourceMessageExtensions.cs" />
+    <Compile Include="Message\SourceMessageExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Session\CallContextSessionContainer.cs" />
     <Compile Include="Session\ISession.cs" />
