--- a/src/Distracey.Agent.SystemWeb/Distracey.Agent.SystemWeb.csproj
+++ b/src/Distracey.Agent.SystemWeb/Distracey.Agent.SystemWeb.csproj
@@ -60,6 +60,8 @@
     <Compile Include="HttpClient\IApmHttpClientLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Session\HttpContextSessionContainer.cs" />
+    <Compile Include="Session\HttpContextSessionContainerHttpModule.cs" />
+    <Compile Include="Session\ISessionContainerExtensions.cs" />
     <Compile Include="WebApi\ApmAttribute.cs" />
     <Compile Include="WebApi\ApmOutgoingResponseDecorator.cs" />
     <Compile Include="WebApi\ApmWebApiFilterAttribute.cs" />
