--- a/src/Distracey.Common/Distracey.Common.csproj
+++ b/src/Distracey.Common/Distracey.Common.csproj
@@ -31,6 +31,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Collections.Immutable, Version=1.1.37.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\System.Collections.Immutable.1.1.37\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
@@ -70,6 +74,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Session\CallContextSessionContainer.cs" />
     <Compile Include="Session\ISession.cs" />
+    <Compile Include="Session\OperationCorrelation\OperationCorrelationManager.cs" />
+    <Compile Include="Session\OperationCorrelation\OperationStack.cs" />
+    <Compile Include="Session\OperationCorrelation\OperationStackItem.cs" />
     <Compile Include="Session\ISessionContainer.cs" />
     <Compile Include="Session\Session.cs" />
     <Compile Include="Session\SessionContext.cs" />
@@ -79,6 +86,9 @@
     <Compile Include="Timer\ExecutionTimer.cs" />
     <Compile Include="Timer\IExecutionTimer.cs" />
     <Compile Include="Timer\TimerResult.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
