--- a/src/Distracey.Common/Distracey.Common.csproj
+++ b/src/Distracey.Common/Distracey.Common.csproj
@@ -72,17 +72,20 @@
     <Compile Include="Message\ClientSourceMessageExtensions.cs" />
     <Compile Include="Message\SourceMessageExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Session\CallContextSessionContainer.cs" />
+    <Compile Include="Session\SessionIdentifier\ISessionIdentifierStorage.cs" />
+    <Compile Include="Session\InMemorySessionContainer.cs" />
     <Compile Include="Session\ISession.cs" />
+    <Compile Include="Session\OperationCorrelation\IOperationStackStorage.cs" />
     <Compile Include="Session\OperationCorrelation\OperationCorrelationManager.cs" />
     <Compile Include="Session\OperationCorrelation\OperationStack.cs" />
     <Compile Include="Session\OperationCorrelation\OperationStackItem.cs" />
     <Compile Include="Session\ISessionContainer.cs" />
+    <Compile Include="Session\OperationCorrelation\CallContextOperationStackStorage.cs" />
     <Compile Include="Session\Session.cs" />
     <Compile Include="Session\SessionContext.cs" />
-    <Compile Include="Session\Storage\ISessionStorage.cs" />
-    <Compile Include="Session\Storage\NullSessionStorage.cs" />
-    <Compile Include="Session\Storage\SessionStorageBase.cs" />
+    <Compile Include="Session\SessionIdentifier\CallContextSessionIdentifierStorage.cs" />
+    <Compile Include="Session\SessionAudit\ISessionStorage.cs" />
+    <Compile Include="Session\SessionAudit\SessionStorageBase.cs" />
     <Compile Include="Timer\ExecutionTimer.cs" />
     <Compile Include="Timer\IExecutionTimer.cs" />
     <Compile Include="Timer\TimerResult.cs" />
