A session is per request.
An activity is per a monitoring gate.

Per session and per activity provide a state bag for storing information.

--- a/src/Distracey.Common/Distracey.Common.csproj
+++ b/src/Distracey.Common/Distracey.Common.csproj
@@ -72,6 +72,8 @@
     <Compile Include="Message\ClientSourceMessageExtensions.cs" />
     <Compile Include="Message\SourceMessageExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Session\IActivity.cs" />
+    <Compile Include="Session\Activity.cs" />
     <Compile Include="Session\SessionIdentifier\ISessionIdentifierStorage.cs" />
     <Compile Include="Session\InMemorySessionContainer.cs" />
     <Compile Include="Session\ISession.cs" />
