--- a/src/Distracey.Common/Distracey.Common.csproj
+++ b/src/Distracey.Common/Distracey.Common.csproj
@@ -74,6 +74,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Session\IActivity.cs" />
     <Compile Include="Session\Activity.cs" />
+    <Compile Include="Session\SessionAudit\ISessionAuditLogger.cs" />
+    <Compile Include="Session\SessionAudit\SessionAuditMessage.cs" />
+    <Compile Include="Session\SessionAudit\SessionAuditStorageLogger.cs" />
     <Compile Include="Session\SessionIdentifier\ISessionIdentifierStorage.cs" />
     <Compile Include="Session\InMemorySessionContainer.cs" />
     <Compile Include="Session\ISession.cs" />
@@ -86,8 +89,8 @@
     <Compile Include="Session\Session.cs" />
     <Compile Include="Session\SessionContext.cs" />
     <Compile Include="Session\SessionIdentifier\CallContextSessionIdentifierStorage.cs" />
-    <Compile Include="Session\SessionAudit\ISessionStorage.cs" />
-    <Compile Include="Session\SessionAudit\SessionStorageBase.cs" />
+    <Compile Include="Session\SessionAudit\ISessionAuditStorage.cs" />
+    <Compile Include="Session\SessionAudit\SessionAuditStorageBase.cs" />
     <Compile Include="Timer\ExecutionTimer.cs" />
     <Compile Include="Timer\IExecutionTimer.cs" />
     <Compile Include="Timer\TimerResult.cs" />
