Http Module removed Ensure that only 1 web api filter attribute is added

--- a/src/Distracey.Common/Distracey.Common.csproj
+++ b/src/Distracey.Common/Distracey.Common.csproj
@@ -62,6 +62,7 @@
     <Compile Include="IApmContext.cs" />
     <Compile Include="IApmContextExtensions.cs" />
     <Compile Include="IEventLogger.cs" />
+    <Compile Include="Message\ISessionMessage.cs" />
     <Compile Include="Message\TimedMessageExtensions.cs" />
     <Compile Include="Message\TracingMessageExtensions.cs" />
     <Compile Include="Message\MessageExtensions.cs" />
