--- a/src/Distracey.Examples.ServiceDepthThree/Distracey.Examples.ServiceDepthThree.csproj
+++ b/src/Distracey.Examples.ServiceDepthThree/Distracey.Examples.ServiceDepthThree.csproj
@@ -15,7 +15,7 @@
     <AssemblyName>Distracey.Examples.ServiceDepthThree</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <UseIISExpress>true</UseIISExpress>
+    <UseIISExpress>false</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
